# Decenza

./: .gitignore  CHARGE.md  CMakeLists.txt  STEAM_HEATER_NOTES.md  claude.md  de1-qt.qmlproject.qtds  de1-qt.qrc  logo
.github/workflows/: ios-release.yml  linux-release.yml
android/: AndroidManifest.xml  build.gradle  build.gradle.bak  settings.gradle
cmake/: IncrementBuildNumber.cmake
docs/: ACCESSIBILITY.md  IOS_CI_FOR_CLAUDE.md  headless-mode-investigation.md  profile-porting-guide.md
docs/accessibility/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md
installer/: version.iss  version.iss.in
ios/: Info.plist
macos/: AppIcon.icns  Info.plist
openspec/: project.md
openspec/changes/add-brew-overrides/: proposal.md  tasks.md
qml/: Theme.qml  main.qml
qml/components/: AIConversationPanel.qml  AccessibleButton.qml  AccessibleLabel.qml  AccessibleMouseArea.qml  AccessibleTapHandler.qml  ActionButton.qml  BrewRatioDialog.qml  ColorEditor.qml  ColorSwatch.qml  ComparisonGraph.qml  ConnectionIndicator.qml  HistoryShotGraph.qml  KeyboardAwareContainer.qml  PresetPillRow.qml  ProfileGraph.qml  ShotGraph.qml  StatusBar.qml  StyledTextField.qml  SuggestionField.qml  SwipeableArea.qml  TouchSlider.qml  Tr.qml  UnsavedChangesDialog.qml  ValueInput.qml
qml/pages/: AISettingsPage.qml  BeanInfoPage.qml  DescalingPage.qml  DialingAssistantPage.qml  EspressoPage.qml  FlushPage.qml  HotWaterPage.qml  IdlePage.qml  ProfileEditorPage.qml  ProfileImportPage.qml  ProfileSelectorPage.qml  RecipeEditorPage.qml  ScreensaverPage.qml  SettingsPage.qml  ShotComparisonPage.qml  ShotDetailPage.qml  ShotHistoryPage.qml  ShotMetadataPage.qml  SteamPage.qml  VisualizerBrowserPage.qml  VisualizerMultiImportPage.qml
qml/pages/settings/: AddLanguagePage.qml  (+14 more)
qml/simulator/: GHCSimulatorWindow.qml
resources/: GHC.psd  resources.qrc
resources/profiles/: 7g_basket.json  80_s_espresso.json  a_flow_default_dark.json  a_flow_default_like_dflow.json  a_flow_default_medium.json  a_flow_default_very_dark.json  adaptive_allonge.json  adaptive_espresso.json  adaptive_v2.json  advanced_spring_lever.json  aflow_dark.json  aflow_like_dflow.json  aflow_medium.json  aflow_very_dark.json  best_overall_pressure_profile.json  best_practice.json  best_practice_light.json  best_practice_light_roast.json  blooming_allonge.json  blooming_espresso.json  classic_italian_espresso.json  cleaning_forward_flush.json  cleaning_forward_flush_x5.json  cleaning_weber_spring_clean.json  cold_brew.json  cremina.json  cremina_lever_machine.json  damian_s_lrv2.json  damians_lm_leva.json  damians_lrv3.json  damians_q.json  default.json  default_espresso.json  descale_wizard.json  e61_classic_gently_up_to_10_bar.json  e61_espresso_machine.json  e61_rocketing_up_to_10_bar.json  e61_with_fast_preinfusion_to_9_bar.json  easy_blooming_active_pressure_decline.json  espresso_forge_dark.json  (+79 more)
src/: main.cpp  version.h.in
src/ai/: aiconversation.cpp  aiconversation.h  aimanager.cpp  aimanager.h  aiprovider.cpp
src/ble/: blemanager.cpp  blemanager.h  de1device.cpp  de1device.h  scaledevice.cpp  scaledevice.h
src/controllers/: directcontroller.cpp  directcontroller.h  maincontroller.cpp  maincontroller.h
src/core/: accessibilitymanager.cpp  accessibilitymanager.h  batterydrainer.cpp  batterydrainer.h  batterymanager.cpp  batterymanager.h  settings.cpp  settings.h  settingsserializer.cpp  translationmanager.cpp  translationmanager.h  updatechecker.cpp  updatechecker.h
src/history/: shothistorystorage.cpp  shothistorystorage.h  shotimporter.cpp  shotimporter.h
src/machine/: machinestate.cpp  machinestate.h
src/models/: shotcomparisonmodel.cpp  shotcomparisonmodel.h  shotdatamodel.cpp  shotdatamodel.h
src/network/: locationprovider.cpp  locationprovider.h  shotreporter.cpp  shotreporter.h  shotserver.cpp  shotserver.h  visualizerimporter.cpp  visualizerimporter.h  visualizeruploader.cpp  webtemplates.h
src/profile/: profile.cpp  profile.h  profileframe.cpp  profileframe.h  recipegenerator.cpp  recipeparams.cpp  recipeparams.h
src/screensaver/: screensavervideomanager.cpp  screensavervideomanager.h
src/simulator/: de1simulator.cpp  de1simulator.h  ghcsimulator.cpp  ghcsimulator.h
(+40 files in other folders)
